feat: upgrade to esp32, redo animations

--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,4 +1,4 @@
 {
     "name": "SchodyKontroller",
-    "py_ignore": [".venv", ".gitignore", "config_example.json"]
+    "py_ignore": [".venv", ".gitignore", "config_example.json", "pyproject.toml", "noise.py"]
 }
